--- a/Jeu_pour_TP_SIR_Photon/Jeu_pour_TP_SIR_Photon.vcxproj.filters
+++ b/Jeu_pour_TP_SIR_Photon/Jeu_pour_TP_SIR_Photon.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="FirstMenu.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="SecondMenu.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Game.hpp">
@@ -60,6 +63,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="FirstMenu.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="SecondMenu.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
