--- a/Jeu_pour_TP_SIR_Photon/Jeu_pour_TP_SIR_Photon.vcxproj
+++ b/Jeu_pour_TP_SIR_Photon/Jeu_pour_TP_SIR_Photon.vcxproj
@@ -90,12 +90,16 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>Include;C:\SFML-2.4.2\include;C:\Photon-Windows-Sdk_v4-1-9-0</AdditionalIncludeDirectories>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>C:\SFML-2.4.2\lib;C:\Photon-Windows-Sdk_v4-1-9-0\Common-cpp\lib;C:\Photon-Windows-Sdk_v4-1-9-0\Photon-cpp\lib;C:\Photon-Windows-Sdk_v4-1-9-0\LoadBalancing-cpp\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>Common-cpp_vc14_$(Configuration)_windows_md_$(Platform).lib;Photon-cpp_vc14_$(Configuration)_windows_md_$(Platform).lib;LoadBalancing-cpp_vc14_$(Configuration)_windows_md_$(Platform).lib;sfml-audio-d.lib;sfml-graphics-d.lib;sfml-network-d.lib;sfml-system-d.lib;sfml-window-d.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -172,6 +176,7 @@
     <ClInclude Include="Include\SecondMenu.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="Include\ResourceHolder.inl" />
     <None Include="Include\StringHelpers.inl" />
   </ItemGroup>
